--- a/Style.css
+++ b/Style.css
@@ -51,7 +51,8 @@ nav ul li a:hover{
 }
 
 .text{
-    margin-top: 15%;
+    margin-top: 5%;
+    margin-left: 12%;
     font-size: 17px;
     letter-spacing: 1px;
     line-height: 26px;
@@ -70,8 +71,8 @@ nav ul li a:hover{
     margin-top: 20px;
     display: inline-block;
     text-decoration: none;
-    background: #9a4545;
-    border: 1px solid #9a4545;
+    background: #fcaaaa;
+    border: 1px solid #f30606;
     border-radius: 30px;
     color: black;
     padding: 10px 30px;                                                          
@@ -79,7 +80,9 @@ nav ul li a:hover{
 
 img{
     width: 300px;
-    height: 400px;
+    height: 500px;
+    border: 3px solid #003088;
+    border-radius: 4px;
     position: absolute;
     right: 6%;
     bottom: 0;
