--- a/Style.css
+++ b/Style.css
@@ -85,8 +85,8 @@ img{
     border-radius: 4px;
     position: absolute;
     right: 6%;
-    bottom: 0;
-    animation: drop 1.5s ease;
+    bottom:0%;
+     animation: drop 5s ease;
 }
 
 @keyframes drop{
